--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: JS CI/CD
 on:
   push: 
-    branches: [main, development]
+    branches: [main, development, release]
   pull_request:
-    branches: [main, development]
+    branches: [main, development, release]
 
 jobs:
   build:
